--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Infinite WebGL Gallery | Demo 1 | Codrops</title>
+  <title>Infinite WebGL Gallery ~ssss| Demo 1 | Codrops</title>
   <meta name="description"
     content="Implementation of infinite scrolling gallery using ogl - minimal WebGL library - with shaders." />
   <meta name="keywords" content="javascript, webgl, shaders, glsl, inspiration, web design" />
